--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
    ================================================== -->
 	<meta charset="utf-8">
 	<title>Portfolio</title>
-	<meta name="description" content="Filippo Visconti's Portfolio">
-	<meta name="author" content="Filippo Visconti">
+	<meta name="description" content="Gabriela Velitch's Portfolio">
+	<meta name="author" content="Gabriela Velitch">
 
 	<!-- mobile specific metas
    ================================================== -->
@@ -24,7 +24,7 @@
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/vendor.css">
 
-	<!-- script 
+	<!-- script
    ================================================== -->
 	<script src="js/modernizr.js"></script>
 	<script src="js/pace.min.js"></script>
@@ -37,7 +37,7 @@
 
 <body id="top">
 
-	<!-- header 
+	<!-- header
    ================================================== -->
 	<header>
 		<div class="row">
@@ -77,12 +77,12 @@
 				<div class="col-twelve">
 
 					<h5>Hello, World.</h5>
-					<h1>I'm Filippo Visconti.</h1>
+					<h1>I'm Gabriela Velitch.</h1>
 
 					<p class="intro-position">
-						<span>MSc Computer Engineering Student</span>
-						<span>Software developer</span>
-						<span>SITE IN DEVELOPMENT</span>
+						<span>Electroacoustic Composer</span>
+						<span>AV Technician</span>
+						<span>Sound Designer</span>
 					</p>
 
 					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
