--- a/index.html
+++ b/index.html
@@ -93,10 +93,9 @@
 		</div> <!-- /intro-content -->
 
 		<ul class="intro-social">
-			<li><a href="https://www.facebook.com/viscontifilippo/"><i class="fa fa-facebook"></i></a></li>
-			<li><a href="https://www.linkedin.com/in/filippo-visconti/"><i class="fa fa-linkedin"></i></a></li>
-			<li><a href="https://github.com/filippovisconti"><i class="fa fa-github"></i></a></li>
-			<!-- <li><a href="#"><i class="fa fa-instagram"></i></a></li> -->
+			<li><a href="https://www.instagram.com/velitch/"><i class="fa fa-instagram"></i></a></li>
+			<li><a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/"><i class="fa fa-linkedin"></i></a></li>
+			<li><a href="https://github.com/Velitch?tab=repositories"><i class="fa fa-github"></i></a></li>
 		</ul> <!-- /intro-social -->
 
 	</section> <!-- /intro -->
