--- a/index.html
+++ b/index.html
@@ -245,12 +245,12 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Software Engineering Intern</h3>
-							<p>January 2022 - June 2022</p>
+							<h3>AV Technical Director</h3>
+							<p>February 2021 - October 2021</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Hewlett-Packard Enterprise</h4>
+							<h4>Fondazione Isabella Sclesi</h4>
 							<p>About to begin. This paragraph will be updated as soon as I start working there.</p>
 						</div>
 
