--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>Fondazione Isabella Sclesi</h4>
-							<p>About to begin. This paragraph will be updated as soon as I start working there.</p>
+							<h4>Fondazione Isabella Sclesi, Rome</h4>
+					<!--		<p>About to begin. This paragraph will be updated as soon as I start working there.</p>-->
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -153,14 +153,14 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Account Manager</h3>
-							<p>March 2020 - March 2021</p>
+							<h3>AV Technical Assistant and Registrations</h3>
+							<p>October 2018 - (to date)</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Università degli Studi Roma TRE</h4>
-							<p>Data analysis and report generation. Account management. Software license management.
-								Helpdesk IT assistant</p>
+							<h4>Conservatory of Santa Cecilia, Rome</h4>
+							<!--	<p>Data analysis and report generation. Account management. Software license management.
+								Helpdesk IT assistant</p>-->
 						</div>
 
 					</div> <!-- /timeline-block -->
