--- a/index.html
+++ b/index.html
@@ -140,8 +140,8 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>Fondazione Isabella Sclesi, Rome</h4>
-					<!--		<p>About to begin. This paragraph will be updated as soon as I start working there.</p>-->
+							<h4>Fondazione Isabella Sclesi</h4>
+							<p>Rome</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -159,8 +159,7 @@
 
 						<div class="timeline-content">
 							<h4>Conservatory of Santa Cecilia, Rome</h4>
-							<!--	<p>Data analysis and report generation. Account management. Software license management.
-								Helpdesk IT assistant</p>-->
+							<p>Rome</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
