--- a/index.html
+++ b/index.html
@@ -158,9 +158,28 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>Conservatory of Santa Cecilia, Rome</h4>
+							<h4>Conservatory of Santa Cecilia</h4>
 							<p>Rome</p>
 						</div>
+
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Musical Assistant</h3>
+							<p>December 2018 - October 2020</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Centro Ricerche Musicali</h4>
+							<p>Rome</p>
+						</div>
+
 
 					</div> <!-- /timeline-block -->
 
