--- a/index.html
+++ b/index.html
@@ -180,6 +180,23 @@
 							<p>Rome</p>
 						</div>
 
+					</div> <!-- /timeline-block -->
+
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-briefcase"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Composer and Sound Designer</h3>
+							<p>2018 - (to date)</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Freelancer</h4>
+							<p>Upwork</p>
+						</div>
 
 					</div> <!-- /timeline-block -->
 
