--- a/index.html
+++ b/index.html
@@ -226,14 +226,13 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Bachelor of Science Degree in Computer Engineering</h3>
-							<p>September 2019 - July 2022</p>
+							<h3>Bachelor of Music Degree in Electoacoustic Composition</h3>
+							<p>November 2016 - July 2020</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Università degli Studi Roma TRE</h4>
-							<p>Description to be added. Description to be added. Description to be added. Description to
-								be added.</p>
+							<h4>Conservatory of Santa Cecilia </h4>
+							<p>Rome</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -245,33 +244,16 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Canadian High School Diploma</h3>
-							<p>September 2017 - July 2018</p>
+							<h3>Biennale Collage – CIMM 2019</h3>
+							<p>November 2019</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Pugwash District High School</h4>
-							<p>Description to be added. Description to be added. Description to be added. Description to
-								be added.</p>
+							<h4>International Masterclass in Computer and Multimedia</h4>
+							<p>Venice</p>
 						</div>
-					</div> <!-- /timeline-block -->
+					</div>
 
-					<div class="timeline-block">
-
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
-
-						<div class="timeline-header">
-							<h3>Italian High School Diploma</h3>
-							<p>September 2014 - June 2019</p>
-						</div>
-
-						<div class="timeline-content">
-							<h4>Liceo Scientifico Statale Farnesina</h4>
-							<p>Description to be added. Description to be added. Description to be added. Description to
-								be added.</p>
-						</div>
 					</div> <!-- /timeline-block -->
 
 				</div> <!-- /timeline-wrap -->
