--- a/index.html
+++ b/index.html
@@ -218,6 +218,23 @@
 
 				<div class="timeline-wrap">
 
+					<div class="timeline-block">
+
+						<div class="timeline-ico">
+							<i class="fa fa-graduation-cap"></i>
+						</div>
+
+						<div class="timeline-header">
+							<h3>Master of Music Degree in Electoacoustic Composition</h3>
+							<p>November 2019 - (todate)</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Conservatory of Santa Cecilia </h4>
+							<p>Rome</p>
+						</div>
+
+					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
 
