--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
 							<p>Venice</p>
 						</div>
 					</div>
-
+</div>
 					</div> <!-- /timeline-block -->
 
 				</div> <!-- /timeline-wrap -->
