--- a/index.html
+++ b/index.html
@@ -212,64 +212,63 @@
 
 				<h2>Education</h2>
 
-			</div> <!-- /resume-header -->
+				</div> <!-- /resume-header -->
 
-			<div class="col-twelve">
+				<div class="col-twelve">
 
-				<div class="timeline-wrap">
+					<div class="timeline-wrap">
 
-					<div class="timeline-block">
 
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
+						<div class="timeline-block">
 
-						<div class="timeline-header">
-							<h3>Master of Music Degree in Electoacoustic Composition</h3>
-							<p>Nov 2019 - (todate)</p>
-						</div>
+							<div class="timeline-ico">
+								<i class="fa fa-graduation-cap"></i>
+							</div>
 
-						<div class="timeline-content">
-							<h4>Conservatory of Santa Cecilia </h4>
-							<p>Rome</p>
-						</div>
+							<div class="timeline-header">
+								<h3>Master of Music Degree in Electroacoustic</h3>
+								<p>Nov 2019 - (to date)</p>
+							</div>
 
-					</div> <!-- /timeline-block -->
+							<div class="timeline-content">
+								<h4>Conservatory of Santa Cecilia</h4>
+								<p>Rome</p>
+							</div>
 
-					<div class="timeline-block">
+						</div> <!-- /timeline-block -->
 
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
+						<div class="timeline-block">
 
-						<div class="timeline-header">
-							<h3>Bachelor of Music Degree in Electoacoustic Composition</h3>
-							<p>Nov 2016 - Jul 2020</p>
-						</div>
+							<div class="timeline-ico">
+								<i class="fa fa-graduation-cap"></i>
+							</div>
 
-						<div class="timeline-content">
-							<h4>Conservatory of Santa Cecilia </h4>
-							<p>Rome</p>
-						</div>
+							<div class="timeline-header">
+								<h3>Bachelor of Music Degree in Electroacoustic</h3>
+								<p>Nov 2016 - Jul 2020</p>
+							</div>
 
-					</div> <!-- /timeline-block -->
+							<div class="timeline-content">
+								<h4>>Conservatory of Santa Cecilia</h4>
+								<p>Rome</p>
+							</div>
+						</div> <!-- /timeline-block -->
 
-					<div class="timeline-block">
+						<div class="timeline-block">
 
-						<div class="timeline-ico">
-							<i class="fa fa-graduation-cap"></i>
-						</div>
+							<div class="timeline-ico">
+								<i class="fa fa-graduation-cap"></i>
+							</div>
 
-						<div class="timeline-header">
-							<h3>Biennale Collage – CIMM 2019</h3>
-							<p>Nov 2019</p>
-						</div>
+							<div class="timeline-header">
+								<h3>Biennale Collage – CIMM 2019</h3>
+								<p>Nov 2019</p>
+							</div>
 
-						<div class="timeline-content">
-							<h4>International Masterclass in Computer and Multimedia</h4>
-							<p>Venice</p>
-						</div>
-					</div>
+							<div class="timeline-content">
+								<h4>Biennale Collage – CIMM 2019</h4>
+								<p>International Masterclass in Computer and Multimedia</p>
+							</div>
 
 					</div> <!-- /timeline-block -->
 
