--- a/index.html
+++ b/index.html
@@ -226,13 +226,13 @@
 							</div>
 
 							<div class="timeline-header">
-								<h3>Master of Music Degree in Electroacoustic</h3>
-								<p>Nov 2019 - (to date)</p>
+								<h3>Conservatory of Santa Cecilia</h3>
+								<p>Rome</p>
 							</div>
 
 							<div class="timeline-content">
-								<h4>Conservatory of Santa Cecilia</h4>
-								<p>Rome</p>
+								<h4>Master of Music Degree in Electroacoustic Composition</h4>
+								<p>Nov 2019 - (to date)</p>
 							</div>
 
 						</div> <!-- /timeline-block -->
@@ -244,13 +244,13 @@
 							</div>
 
 							<div class="timeline-header">
-								<h3>Bachelor of Music Degree in Electroacoustic</h3>
-								<p>Nov 2016 - Jul 2020</p>
+								<h3>Conservatory of Santa Cecilia</h3>
+								<p>Rome</p>
 							</div>
 
 							<div class="timeline-content">
-								<h4>>Conservatory of Santa Cecilia</h4>
-								<p>Rome</p>
+								<h4>>Bachelor of Music Degree in Electroacoustic Composition</h4>
+								<p>Nov 2016 - Jul 2020</p>
 							</div>
 						</div> <!-- /timeline-block -->
 
@@ -262,12 +262,12 @@
 
 							<div class="timeline-header">
 								<h3><a href="https://www.labiennale.org/it/musica/2019/biennale-college-cimm-masterclass">Biennale Collage – CIMM 2019</a></h3>
-								<p>Nov 2019</p>
+								<p>Venice</p>
 							</div>
 
 							<div class="timeline-content">
-								<h4>Biennale Collage – CIMM 2019</h4>
-								<p>International Masterclass in Computer and Multimedia</p>
+								<h4>International Masterclass in Computer and Multimedia</h4>
+								<p>Nov 2019</p>
 							</div>
 
 					</div> <!-- /timeline-block -->
