--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>Conservatory of Santa Cecilia</h4>
+							<h4><a href="https://www.conservatoriosantacecilia.it">Conservatory of Santa Cecilia</a></h4>
 							<p>Rome</p>
 						</div>
 
@@ -226,7 +226,7 @@
 							</div>
 
 							<div class="timeline-header">
-								<h3>Conservatory of Santa Cecilia</h3>
+								<h3><a href="https://www.conservatoriosantacecilia.it">Conservatory of Santa Cecilia</a></h3>
 								<p>Rome</p>
 							</div>
 
@@ -244,7 +244,7 @@
 							</div>
 
 							<div class="timeline-header">
-								<h3>Conservatory of Santa Cecilia</h3>
+								<h3><a href="https://www.conservatoriosantacecilia.it">Conservatory of Santa Cecilia</a></h3>
 								<p>Rome</p>
 							</div>
 
