--- a/index.html
+++ b/index.html
@@ -135,15 +135,15 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>AV Technical Director</h3>
+							<h3>Fondazione Isabella Sclesi</h3>
+							<p>Rome</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>AV Technical Director</h4>
 							<p>Feb 2021 - Oct 2021</p>
 						</div>
 
-						<div class="timeline-content">
-							<h4>Fondazione Isabella Sclesi</h4>
-							<p>Rome</p>
-						</div>
-
 					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
@@ -153,15 +153,15 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>AV Technical Assistant and Registrations</h3>
+							<h3><a href="https://www.conservatoriosantacecilia.it">Conservatory of Santa Cecilia</a></h3>
+							<p>Rome</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>AV Technical Assistant and Registrations</h4>
 							<p>Oct 2018 - (to date)</p>
 						</div>
 
-						<div class="timeline-content">
-							<h4><a href="https://www.conservatoriosantacecilia.it">Conservatory of Santa Cecilia</a></h4>
-							<p>Rome</p>
-						</div>
-
 					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
@@ -171,15 +171,15 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Musical Assistant</h3>
+							<h3>Centro Ricerche Musicali</h3>
+							<p>Rome</p>
+						</div>
+
+						<div class="timeline-content">
+							<h4>Musical Assistant</h4>
 							<p>Dec 2018 - Oct 2020</p>
 						</div>
 
-						<div class="timeline-content">
-							<h4>Centro Ricerche Musicali</h4>
-							<p>Rome</p>
-						</div>
-
 					</div> <!-- /timeline-block -->
 
 					<div class="timeline-block">
@@ -189,13 +189,13 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Composer and Sound Designer</h3>
-							<p>2018 - (to date)</p>
+							<h3>Freelancer</h3>
+							<p>Upwork</p>
 						</div>
 
 						<div class="timeline-content">
-							<h4>Freelancer</h4>
-							<p>Upwork</p>
+							<h4>Composer and Sound Designer</h4>
+							<p>2018 - (to date)</p>
 						</div>
 
 					</div> <!-- /timeline-block -->
@@ -249,7 +249,7 @@
 							</div>
 
 							<div class="timeline-content">
-								<h4>>Bachelor of Music Degree in Electroacoustic Composition</h4>
+								<h4>Bachelor of Music Degree in Electroacoustic Composition</h4>
 								<p>Nov 2016 - Jul 2020</p>
 							</div>
 						</div> <!-- /timeline-block -->
