--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
 							</div>
 
 							<div class="timeline-header">
-								<h3><a href="https://www.labiennale.org/it/musica/2019/biennale-college-cimm-masterclass">Biennale Collage CIMM 2019</a></h3>
+								<h3><a href="https://www.labiennale.org/it/musica/2019/biennale-college-cimm-masterclass">Biennale Collage CIMM</a></h3>
 								<p>Venice</p>
 							</div>
 
