--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Fondazione Isabella Sclesi</h3>
+							<h3><a href="http://www.scelsi.it">Fondazione Isabella Sclesi</a></h3>
 							<p>Rome</p>
 						</div>
 
@@ -171,7 +171,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Centro Ricerche Musicali</h3>
+							<h3><a href="http://www.crm-music.it">Centro Ricerche Musicali</a></h3>
 							<p>Rome</p>
 						</div>
 
@@ -189,7 +189,7 @@
 						</div>
 
 						<div class="timeline-header">
-							<h3>Freelancer</h3>
+							<h3><a href="https://www.upwork.com/freelancers/~012af1b30a17910815">Freelancer</a></h3>
 							<p>Upwork</p>
 						</div>
 
