--- a/index.html
+++ b/index.html
@@ -606,17 +606,16 @@
 			<div class="col-six tab-full pull-right social">
 
 				<ul class="footer-social">
-					<li><a href="https://www.facebook.com/viscontifilippo/"><i class="fa fa-facebook"></i></a></li>
-					<li><a href="https://www.linkedin.com/in/filippo-visconti/"><i class="fa fa-linkedin"></i></a></li>
-					<li><a href="https://github.com/filippovisconti"><i class="fa fa-github"></i></a></li>
+					<li><a href="https://www.instagram.com/velitch/"><i class="fa fa-instagram"></i></a></li>
+					<li><a href="https://www.linkedin.com/in/gabriela-velitch-5766991b2/"><i class="fa fa-linkedin"></i></a></li>
+					<li><a href="https://github.com/Velitch?tab=repositories"><i class="fa fa-github"></i></a></li>
 				</ul>
 
 			</div>
 
 			<div class="col-six tab-full">
 				<div class="copyright">
-					<span>© Copyright Kards 2016.</span>
-					<span>Design by <a href="http://www.styleshout.com/">styleshout</a></span>
+					<span>Gabriela Velitch 2021.</span>
 				</div>
 			</div>
 
