--- a/index.html
+++ b/index.html
@@ -558,9 +558,7 @@
 				<h5>Where to find me</h5>
 
 				<p>
-					Via Vito Volterra 62<br>
-					Rome, RM<br>
-					00191 Italy
+					Anywhere
 				</p>
 
 			</div>
@@ -573,8 +571,7 @@
 
 				<h5>Email Me At</h5>
 
-				<p><a href="mailto:filippo.visconti23@gmail.com">Gmail address</a><br>
-					<a href="mailto:fil.visconti@stud.uniroma3.it">Institutional address</a>
+				<p><a href="mailto:gabrielavelitch@gmail.com">e-mail</a><br>
 				</p>
 
 			</div>
