--- a/index.html
+++ b/index.html
@@ -492,7 +492,8 @@
 				<h5>Contact</h5>
 				<h1>I'd Love To Hear From You.</h1>
 
-				<p class="lead">Send me an email! I will get back to you as soon as possible.</p>
+				<p class="lead">Send me an email! <br>
+					I will get back to you as soon as possible.</p>
 
 			</div>
 		</div> <!-- /section-intro -->
