--- a/index.html
+++ b/index.html
@@ -572,7 +572,7 @@
 
 				<h5>Email Me At</h5>
 
-				<p><a href="mailto:gabrielavelitch@gmail.com">e-mail</a><br>
+				<p><a href="mailto:gabrielavelitch@gmail.com">gabrielavelitch@gmail.com</a><br>
 				</p>
 
 			</div>
