--- a/index.html
+++ b/index.html
@@ -577,7 +577,7 @@
 
 			</div>
 
-			<div class="col-four tab-full">
+		<!--	<div class="col-four tab-full">
 
 				<div class="icon">
 					<i class="icon-phone"></i>
@@ -588,7 +588,7 @@
 				<p> <a href="https:/t.me/filippovisconti/">@FilippoVisconti</a>
 				</p>
 
-			</div>
+			</div> -->
 
 		</div> <!-- /contact-info -->
 
