--- a/index.html
+++ b/index.html
@@ -588,9 +588,10 @@
 				<p> <a href="https:/t.me/filippovisconti/">@FilippoVisconti</a>
 				</p>
 
-			</div> -->
+			</div>
 
-		</div> <!-- /contact-info -->
+		</div>-->
+		 <!-- /contact-info -->
 
 	</section> <!-- /contact -->
 
