--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
 			<div class="col-twelve">
 
 				<h5>Resume</h5>
-				<h1>More of my credentials.</h1>
+				<h1>Credentials</h1>
 
-				<p class="lead">A short description of the most significant steps in my career.</p>
+				<p class="lead">A short description of the most significant steps in my career</p>
 
 			</div>
 		</div> <!-- /section-intro-->
@@ -293,7 +293,7 @@
 				<h5>Services</h5>
 				<h1>What Can I Do For You?</h1>
 
-				<p class="lead">This section is still under development.</p>
+				<p class="lead">from sound to visuals</p>
 
 			</div>
 		</div> <!-- /section-intro -->
