--- a/index.html
+++ b/index.html
@@ -132,11 +132,11 @@
 						</div>
 
 						<h3 class="stat-count">
-							150
+							78
 						</h3>
 
 						<h5 class="stat-title">
-							Coffee Cups
+							Events
 						</h5>
 
 					</div> <!-- /stat -->
