--- a/index.html
+++ b/index.html
@@ -128,11 +128,11 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-cup"></i>
+							<i class="icon-clipboard"></i>
 						</div>
 
 						<h3 class="stat-count">
-							78
+							129
 						</h3>
 
 						<h5 class="stat-title">
@@ -144,15 +144,15 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-clock"></i>
+							<i class="icon-users"></i>
 						</div>
 
 						<h3 class="stat-count">
-							720
+							1124
 						</h3>
 
 						<h5 class="stat-title">
-							Hours
+							Artists Met
 						</h5>
 
 					</div> <!-- /stat -->
