--- a/index.html
+++ b/index.html
@@ -372,12 +372,9 @@
 
 					<div class="service-content">
 
-						<h3>Webdesign</h3>
+						<h3>Live Sound Engeneering</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">Museums .
 						</p>
 
 					</div>
@@ -390,12 +387,9 @@
 
 					<div class="service-content">
 
-						<h3>Mobile Apps Development</h3>
+						<h3>Art Installations</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc"> International Embassies.
 						</p>
 
 					</div>
@@ -408,12 +402,9 @@
 
 					<div class="service-content">
 
-						<h3>Cloud Computing</h3>
+						<h3>Visuals Compositions</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">teaching abilitation.
 						</p>
 
 					</div>
@@ -426,12 +417,9 @@
 
 					<div class="service-content">
 
-						<h3>UI/UX Design</h3>
+						<h3>Between Analog and Digital</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">Soldering coding.
 						</p>
 
 					</div>
@@ -444,7 +432,7 @@
 
 					<div class="service-content">
 
-						<h3>Graphics Design</h3>
+						<h3>Multilingual Skills</h3>
 
 						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
 							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
@@ -462,7 +450,7 @@
 
 					<div class="service-content">
 
-						<h3>Consultancy</h3>
+						<h3>Tutoring</h3>
 
 						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
 							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
