--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-cloud"></i></span>
+					<span class="icon"><i class="icon-display"></i></span>
 
 					<div class="service-content">
 
@@ -428,7 +428,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-image"></i></span>
+					<span class="icon"><i class="icon-earth"></i></span>
 
 					<div class="service-content">
 
