--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-earth"></i></span>
+					<span class="icon"><i class="icon-volume-high"></i></span>
 
 					<div class="service-content">
 
@@ -383,7 +383,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-mobile"></i></span>
+					<span class="icon"><i class="icon-radio-checked"></i></span>
 
 					<div class="service-content">
 
