--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-display"></i></span>
+					<span class="icon"><i class="icon-desktop"></i></span>
 
 					<div class="service-content">
 
