--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-volume-high"></i></span>
+					<span class="icon"><i class="icon-volume-up"></i></span>
 
 					<div class="service-content">
 
