--- a/index.html
+++ b/index.html
@@ -383,7 +383,7 @@
 
 				<div class="service">
 
-					<span class="icon"><i class="icon-radio-checked"></i></span>
+					<span class="icon"><i class="icon-cubes"></i></span>
 
 					<div class="service-content">
 
