--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
 					<div class="bgrid stat">
 
 						<div class="icon-part">
-							<i class="icon-clipboard"></i>
+							<i class="fa fa-clipboard"></i>
 						</div>
 
 						<h3 class="stat-count">
