--- a/index.html
+++ b/index.html
@@ -46,15 +46,13 @@
 				<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 				<div class="logo">
-					<a href="index.html">PORTFOLIO</a>
+					<a href="index.html">Home</a>
 				</div>
 
 				<nav id="main-nav-wrap">
 					<ul class="main-navigation">
 						<li class="current"><a class="smoothscroll" href="#intro" title="">Home</a></li>
-						<li><a class="smoothscroll" href="#about" title="">About</a></li>
 						<li><a class="smoothscroll" href="#resume" title="">Resume</a></li>
-						<li><a class="smoothscroll" href="#portfolio" title="">Portfolio</a></li>
 						<li><a class="smoothscroll" href="#services" title="">Services</a></li>
 						<li><a class="smoothscroll" href="#contact" title="">Contact</a></li>
 						<!-- <li><a href="styles.html" title="">Style Demo</a></li> -->
@@ -85,7 +83,7 @@
 						<span>Sound Designer</span>
 					</p>
 
-					<a class="button stroke smoothscroll" href="#about" title="">More About Me</a>
+					<a class="button stroke smoothscroll" href="#resume" title="">About Me</a>
 
 				</div>
 
