--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
 						</div>
 
 						<div class="timeline-content">
-							<h4>Composer, Sound Designer, Audio Video Developement and Tutoring</h4>
+							<h4>Composer, Sound Designer, Audio/Video Developer and Tutor</h4>
 							<p>2018 - (to date)</p>
 						</div>
 
