--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 
 						<div class="timeline-header">
 							<h4><a href="http://www.crm-music.it">Centro Ricerche Musicali</a></h4>
-							<p>Rome</p>
+							<p>Rome, Matera, L'Aquila</p>
 						</div>
 
 						<div class="timeline-content">
