--- a/index.html
+++ b/index.html
@@ -562,7 +562,7 @@
 
 			</div>
 
-		<!--	<div class="col-four tab-full">
+		<div class="col-four tab-full">
 
 				<div class="icon">
 					<i class="icon-phone"></i>
@@ -570,7 +570,7 @@
 
 				<h5>Reach me on Telegram</h5>
 
-				<p> <a href="https:/t.me/filippovisconti/">@FilippoVisconti</a>
+				<p> <a href="https:/t.me/gabrielavelitch/">@GabrielaVelitch</a>
 				</p>
 
 			</div>
