--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
 
 				<h5>Reach me on Telegram</h5>
 
-				<p> <a href="https:/t.me/gabrielavelitch/">@GabrielaVelitch</a>
+				<p> <a href="https://msng.link/o/?gabrielavelitch=tg">@GabrielaVelitch</a>
 				</p>
 
 			</div>
