--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<!--- basic page needs
    ================================================== -->
 	<meta charset="utf-8">
-	<title>Portfolio</title>
+	<title>Gabriela Velitch</title>
 	<meta name="description" content="Gabriela Velitch's Portfolio">
 	<meta name="author" content="Gabriela Velitch">
 
