--- a/index.html
+++ b/index.html
@@ -415,7 +415,7 @@
 
 					<div class="service-content">
 
-						<h3>Between Analog and Digital</h3>
+						<h3>Analog and Digital</h3>
 
 						<p class="desc">Soldering coding.
 						</p>
