--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
 	<header>
 		<div class="row">
 
-			<div class="top-bar">
+			<!--	<div class="top-bar">
 				<a class="menu-toggle" href="#"><span>Menu</span></a>
 
 				<div class="logo">
 					<a href="index.html">Home</a>
-				</div>
+				</div>-->
 
 				<nav id="main-nav-wrap">
 					<ul class="main-navigation">
