--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
 
 						<h3>Live Sound Engeneering</h3>
 
-						<p class="desc">Museums .
+						<p class="desc"> Hundreds of hours of concerts, from classical to contemporary or jazz. Miked and performed more than a thousand artists.
 						</p>
 
 					</div>
