--- a/index.html
+++ b/index.html
@@ -432,10 +432,7 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">text
 						</p>
 
 					</div>
@@ -450,10 +447,7 @@
 
 						<h3>Tutoring</h3>
 
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
+						<p class="desc">text
 						</p>
 
 					</div>
