--- a/index.html
+++ b/index.html
@@ -342,6 +342,18 @@
 
 	</section> <!-- /features -->
 
+</div>
+
+</div>
+
+<div class="row button-section">
+<div class="col-twelve">
+	<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+	<a href="files/cv.pdf" title="Download CV" class="button button-primary">Download CV</a>
+</div>
+</div>
+
+</section>
 
 	<!-- services Section
    ================================================== -->
