--- a/index.html
+++ b/index.html
@@ -340,20 +340,20 @@
 
 		</div> <!-- /resume-timeline -->
 
-	</section> <!-- /features -->
-
-</div>
+	</div>
 
 </div>
 
 <div class="row button-section">
-<div class="col-twelve">
-	<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
-	<a href="files/cv.pdf" title="Download CV" class="button button-primary">Download CV</a>
-</div>
+	<div class="col-twelve">
+		<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Hire Me</a>
+		<a href="files/cv.pdf" title="Download CV" class="button button-primary">Download CV</a>
+	</div>
 </div>
 
-</section>
+	</section> <!-- /features -->
+
+
 
 	<!-- services Section
    ================================================== -->
@@ -384,7 +384,7 @@
 
 						<h3>Live Sound Engeneering</h3>
 
-						<p class="desc"> Hundreds of hours of concerts, from classical to contemporary or jazz. Miked and performed more than a thousand artists.
+						<p class="desc">Museums .
 						</p>
 
 					</div>
@@ -444,7 +444,10 @@
 
 						<h3>Multilingual Skills</h3>
 
-						<p class="desc">text
+						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+							sit aspernatur aut odit aut fugit.
 						</p>
 
 					</div>
@@ -459,7 +462,10 @@
 
 						<h3>Tutoring</h3>
 
-						<p class="desc">text
+						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
+							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
+							sit aspernatur aut odit aut fugit.
 						</p>
 
 					</div>
