--- a/index.html
+++ b/index.html
@@ -162,6 +162,122 @@
 
 	</section> <!-- /stats -->
 
+	<!-- services Section
+   ================================================== -->
+	<section id="services">
+
+		<div class="overlay"></div>
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>Services</h5>
+				<h1>What Can I Do For You?</h1>
+
+				<p class="lead">from sound to visuals</p>
+
+			</div>
+		</div> <!-- /section-intro -->
+
+		<div class="row services-content">
+
+			<div id="owl-slider" class="owl-carousel services-list">
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-volume-up"></i></span>
+
+					<div class="service-content">
+
+						<h3>Live Sound Engeneering</h3>
+
+						<p class="desc">Museums .
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="fa fa-cubes"></i></span>
+
+					<div class="service-content">
+
+						<h3>Art Installations</h3>
+
+						<p class="desc"> International Embassies.
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-desktop"></i></span>
+
+					<div class="service-content">
+
+						<h3>Visuals Compositions</h3>
+
+						<p class="desc">teaching abilitation.
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-toggles"></i></span>
+
+					<div class="service-content">
+
+						<h3>Analog and Digital</h3>
+
+						<p class="desc">Soldering coding.
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-earth"></i></span>
+
+					<div class="service-content">
+
+						<h3>Multilingual Skills</h3>
+
+						<p class="desc">text.
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+				<div class="service">
+
+					<span class="icon"><i class="icon-chat"></i></span>
+
+					<div class="service-content">
+
+						<h3>Tutoring</h3>
+
+						<p class="desc">text.
+						</p>
+
+					</div>
+
+				</div> <!-- /service -->
+
+			</div> <!-- /services-list -->
+
+		</div> <!-- /services-content -->
+
+	</section> <!-- /services -->
 
 	<!-- resume Section
    ================================================== -->
@@ -355,128 +471,6 @@
 
 
 
-	<!-- services Section
-   ================================================== -->
-	<section id="services">
-
-		<div class="overlay"></div>
-
-		<div class="row section-intro">
-			<div class="col-twelve">
-
-				<h5>Services</h5>
-				<h1>What Can I Do For You?</h1>
-
-				<p class="lead">from sound to visuals</p>
-
-			</div>
-		</div> <!-- /section-intro -->
-
-		<div class="row services-content">
-
-			<div id="owl-slider" class="owl-carousel services-list">
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-volume-up"></i></span>
-
-					<div class="service-content">
-
-						<h3>Live Sound Engeneering</h3>
-
-						<p class="desc">Museums .
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="fa fa-cubes"></i></span>
-
-					<div class="service-content">
-
-						<h3>Art Installations</h3>
-
-						<p class="desc"> International Embassies.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-desktop"></i></span>
-
-					<div class="service-content">
-
-						<h3>Visuals Compositions</h3>
-
-						<p class="desc">teaching abilitation.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-toggles"></i></span>
-
-					<div class="service-content">
-
-						<h3>Analog and Digital</h3>
-
-						<p class="desc">Soldering coding.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-earth"></i></span>
-
-					<div class="service-content">
-
-						<h3>Multilingual Skills</h3>
-
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-				<div class="service">
-
-					<span class="icon"><i class="icon-chat"></i></span>
-
-					<div class="service-content">
-
-						<h3>Tutoring</h3>
-
-						<p class="desc">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
-							doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et
-							quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas
-							sit aspernatur aut odit aut fugit.
-						</p>
-
-					</div>
-
-				</div> <!-- /service -->
-
-			</div> <!-- /services-list -->
-
-		</div> <!-- /services-content -->
-
-	</section> <!-- /services -->
 
 
 	<!-- contact
