--- a/index.html
+++ b/index.html
@@ -470,6 +470,117 @@
 	</section> <!-- /features -->
 
 
+	<!-- Portfolio Section
+   ================================================== -->
+	<section id="portfolio">
+
+		<div class="row section-intro">
+			<div class="col-twelve">
+
+				<h5>Portfolio</h5>
+				<h1>Check Out Some of My Works.</h1>
+
+				<p class="lead">Here you will find a collection of my most recent projects. Feel free to chip in and
+					give suggestions on how I could improve them.</p>
+
+			</div>
+		</div> <!-- /section-intro-->
+
+		<div class="row portfolio-content">
+
+			<div class="col-twelve">
+
+				<!-- portfolio-wrapper -->
+				<div id="folio-wrapper" class="block-1-2 block-mob-full stack">
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/app.jpg" alt="Liberty">
+							<a href="#modal-01" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">FillYourTeam!</h3>
+										<span class="folio-types">
+											Multiplatform Mobile App
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
+					<div class="bgrid folio-item">
+						<div class="item-wrap">
+							<img src="images/portfolio/liberty.jpg" alt="Shutterbug">
+							<a href="#modal-02" class="overlay">
+								<div class="folio-item-table">
+									<div class="folio-item-cell">
+										<h3 class="folio-title">Another Example</h3>
+										<span class="folio-types">
+											Web Design
+										</span>
+									</div>
+								</div>
+							</a>
+						</div>
+					</div> <!-- /folio-item -->
+
+
+					<!-- modal popups - begin
+	            ============================================================= -->
+					<div id="modal-01" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/portfolio/modals/m-app.jpg" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>FillYourTeam!</h4>
+							<p>A multiplatform mobile app developed with other 2 colleagues using the Xamarin framework
+								and C# and XAML.</p>
+
+							<div class="categories">Multiplatform Mobile App</div>
+						</div>
+
+						<div class="link-box">
+							<a href="http://www.github.com/filippovisconti/mcproject">GitHub Repository</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-01 -->
+
+					<div id="modal-02" class="popup-modal slider mfp-hide">
+
+						<div class="media">
+							<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+						</div>
+
+						<div class="description-box">
+							<h4>Shutterbug</h4>
+							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
+								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+
+							<div class="categories">Web Design</div>
+						</div>
+
+						<div class="link-box">
+							<a href="http://www.behance.net">Details</a>
+							<a href="#" class="popup-modal-dismiss">Close</a>
+						</div>
+
+					</div> <!-- /modal-02 -->
+
+
+					<!-- modal popups - end
+	            ============================================================= -->
+
+				</div> <!-- /portfolio-wrapper -->
+
+			</div> <!-- /twelve -->
+
+		</div> <!-- /portfolio-content -->
+
+	</section> <!-- /portfolio -->
 
 
 
