--- a/index.html
+++ b/index.html
@@ -173,8 +173,7 @@
 				<h5>Portfolio</h5>
 				<h1>Check Out Some of My Works.</h1>
 
-				<p class="lead">Here you will find a collection of my most recent projects. Feel free to chip in and
-					give suggestions on how I could improve them.</p>
+				<p class="lead">here you will find a collection of the most recent works I have collaborated on.</p>
 
 			</div>
 		</div> <!-- /section-intro-->
