--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 				<h5>Portfolio</h5>
 				<h1>Check Out Some of My Works.</h1>
 
-				<p class="lead">here you will find a collection of the most recent works I have collaborated on.</p>
+				<p class="lead">Here you will find a collection of the most recent works I have collaborated on.</p>
 
 			</div>
 		</div> <!-- /section-intro-->
