--- a/index.html
+++ b/index.html
@@ -191,9 +191,9 @@
 							<a href="#modal-01" class="overlay">
 								<div class="folio-item-table">
 									<div class="folio-item-cell">
-										<h3 class="folio-title">FillYourTeam!</h3>
+										<h3 class="folio-title">Tribute to Mario Bertoncini</h3>
 										<span class="folio-types">
-											Multiplatform Mobile App
+											Concert and Masterclass
 										</span>
 									</div>
 								</div>
@@ -223,11 +223,11 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/m-app.jpg" alt="" />
+							<img src="images/bertoncini.jpg" alt="" />
 						</div>
 
 						<div class="description-box">
-							<h4>FillYourTeam!</h4>
+							<h4>Tribute to Mario Bertoncini</h4>
 							<p>A multiplatform mobile app developed with other 2 colleagues using the Xamarin framework
 								and C# and XAML.</p>
 
