--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="http://www.github.com/filippovisconti/mcproject">GitHub Repository</a>
+							<a href="http://www.scelsi.it/it/evento/omaggio-a-mario-bertoncini/">Find Out!</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
