--- a/index.html
+++ b/index.html
@@ -228,10 +228,9 @@
 
 						<div class="description-box">
 							<h4>Tribute to Mario Bertoncini</h4>
-							<p>A multiplatform mobile app developed with other 2 colleagues using the Xamarin framework
-								and C# and XAML.</p>
+							<p>The star of the evening is the quartet that Mario Bertoncini himself founded shortly before his death. The program includes two of his works, together with works by Walter Branchi and Giorngio Nottoli (world premiere dedicated to Mario, for the quartet). The concert ends with Improvviso - subtitle by / for Mario Bertoncini, a performance in which the Maestro's sound sculptures preserved in the Bertoncini Fund recently established at the Isabella Scelsi Foundation are used extensively.</p>
 
-							<div class="categories">Multiplatform Mobile App</div>
+							<div class="categories">Concert and Masterclass</div>
 						</div>
 
 						<div class="link-box">
