--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
 
 						<div class="description-box">
 							<h4>Tribute to Mario Bertoncini</h4>
-							<p>The star of the evening is the quartet that <a href="https://it.wikipedia.org/wiki/Mario_Bertoncini">Mario Bertoncini</a> himself founded shortly before his death. The program includes two of his works, together with works by <a href="https://it.wikipedia.org/wiki/Walter_Branchi">Walter Branchi</a> and <a href="https://it.wikipedia.org/wiki/Giorgio_Nottoli">Giorgio Nottoli</a> (world premiere dedicated to Mario, for the quartet). The concert ends with Improvviso - subtitle by/for <a href="https://it.wikipedia.org/wiki/Mario_Bertoncini">Mario Bertoncini</a>, a performance in which the Maestro's sound sculptures preserved in the Bertoncini Fund recently established at the Isabella Scelsi Foundation are used extensively.</p>
+							<p align="justify">The star of the evening is the quartet that <a href="https://it.wikipedia.org/wiki/Mario_Bertoncini">Mario Bertoncini</a> himself founded shortly before his death. The program includes two of his works, together with works by <a href="https://it.wikipedia.org/wiki/Walter_Branchi">Walter Branchi</a> and <a href="https://it.wikipedia.org/wiki/Giorgio_Nottoli">Giorgio Nottoli</a> (world premiere dedicated to Mario, for the quartet). The concert ends with Improvviso - subtitle by/for <a href="https://it.wikipedia.org/wiki/Mario_Bertoncini">Mario Bertoncini</a>, a performance in which the Maestro's sound sculptures preserved in the Bertoncini Fund recently established at the Isabella Scelsi Foundation are used extensively.</p>
 
 							<div class="categories">Concert and Masterclass</div>
 						</div>
