--- a/index.html
+++ b/index.html
@@ -243,11 +243,11 @@
 					<div id="modal-02" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/portfolio/modals/m-liberty.jpg" alt="" />
+							<img src="images/corkino.jpg" alt="" />
 						</div>
 
 						<div class="description-box">
-							<h4>Shutterbug</h4>
+							<h4>corkino</h4>
 							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
 								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
 
