--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
 
 						<div class="description-box">
 							<h4>corkino</h4>
-							<p>Proin gravida nibh vel velit auctor aliquet. Aenean sollicitudin, lorem quis bibendum
-								auctor, nisi elit consequat ipsum, nec sagittis sem nibh id elit.</p>
+							<p>Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
 
 							<div class="categories">Web Design</div>
 						</div>
