--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
 						</div>
 
 						<div class="link-box">
-							<a href="http://www.scelsi.it/it/evento/omaggio-a-mario-bertoncini/">Find Out!</a>
+							<a href="http://www.scelsi.it/it/evento/omaggio-a-mario-bertoncini/">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
@@ -250,11 +250,11 @@
 							<h4>corkino</h4>
 							<p>Six channel gains allow you to mix with an all-new hexagonal gain design. Users can change channel-gain functionality: fade clips in and out of the mix; pan instruments to the left, right, or center; raise the level of reverb or other effects to create fluid transitions; open and close filters for lush sweeps: each gain is completely assignable for flexible mixing and mapping options.</p>
 
-							<div class="categories">Web Design</div>
+							<div class="categories">Instruments Production</div>
 						</div>
 
 						<div class="link-box">
-							<a href="http://www.behance.net">Details</a>
+							<a href="https://velitch.github.io/velitch/2021-10-13-corkino/">Details</a>
 							<a href="#" class="popup-modal-dismiss">Close</a>
 						</div>
 
