--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 				<h5>Services</h5>
 				<h1>What Can I Do For You?</h1>
 
-				<p class="lead">from sound to visuals</p>
+				<p class="lead"></p>
 
 			</div>
 		</div> <!-- /section-intro -->
