--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
 					<div id="modal-01" class="popup-modal slider mfp-hide">
 
 						<div class="media">
-							<img src="images/bertoncini.jpg" width="25%" height="25%" />
+							<img src="images/bertoncini.jpg"/>
 						</div>
 
 						<div class="description-box">
